// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`last Snapshot - show error message modal 1`] = `
<div
  className="app"
>
  <div
    className="main-page-header"
  >
    <div
      className="main-page-header-title"
    >
      <span />
      <h1>
        Readable
      </h1>
      <select
        onChange={[Function]}
      >
        <option
          value="none"
        >
          All Categories
        </option>
      </select>
    </div>
  </div>
  <div
    className="search-bar"
  >
    <input
      placeholder="Search by title post"
      type="text"
    />
  </div>
  <div
    className="main-page-content"
  >
    <div
      className="posts"
    >
      <div
        className="posts-title"
      >
        <span>
          Posts
        </span>
        <div
          className="order-options"
        >
          <select>
            <option
              value="voteScore"
            >
              Vote Score
            </option>
            <option
              value="publishedDate"
            >
              Published date
            </option>
          </select>
        </div>
      </div>
      <div
        className="posts-list"
      />
    </div>
  </div>
  <div
    className="flat-button"
    onClick={[Function]}
  >
    <a
      className="add"
    >
      Add Post
    </a>
  </div>
</div>
`;

exports[`last Snapshot - show message wait process modal 1`] = `
<div
  className="app"
>
  <div
    className="main-page-header"
  >
    <div
      className="main-page-header-title"
    >
      <span />
      <h1>
        Readable
      </h1>
      <select
        onChange={[Function]}
      >
        <option
          value="none"
        >
          All Categories
        </option>
      </select>
    </div>
  </div>
  <div
    className="search-bar"
  >
    <input
      placeholder="Search by title post"
      type="text"
    />
  </div>
  <div
    className="main-page-content"
  >
    <div
      className="posts"
    >
      <div
        className="posts-title"
      >
        <span>
          Posts
        </span>
        <div
          className="order-options"
        >
          <select>
            <option
              value="voteScore"
            >
              Vote Score
            </option>
            <option
              value="publishedDate"
            >
              Published date
            </option>
          </select>
        </div>
      </div>
      <div
        className="posts-list"
      />
    </div>
  </div>
  <div
    className="modal-short modal-open"
  >
    <div
      className="modal-short-dialog wait-process-dialog"
    >
      <h1>
        Please wait while the information is updated.
      </h1>
    </div>
  </div>
  <div
    className="flat-button"
    onClick={[Function]}
  >
    <a
      className="add"
    >
      Add Post
    </a>
  </div>
</div>
`;

exports[`last Snapshot - show new post form modal 1`] = `
<div
  className="app"
>
  <div
    className="main-page-header"
  >
    <div
      className="main-page-header-title"
    >
      <span />
      <h1>
        Readable
      </h1>
      <select
        onChange={[Function]}
      >
        <option
          value="none"
        >
          All Categories
        </option>
        <option
          value="udacity"
        >
          Udacity
        </option>
        <option
          value="react"
        >
          React
        </option>
        <option
          value="redux"
        >
          Redux
        </option>
      </select>
    </div>
  </div>
  <div
    className="search-bar"
  >
    <input
      placeholder="Search by title post"
      type="text"
    />
  </div>
  <div
    className="main-page-content"
  >
    <div
      className="posts"
    >
      <div
        className="posts-title"
      >
        <span>
          Posts
        </span>
        <div
          className="order-options"
        >
          <select>
            <option
              value="voteScore"
            >
              Vote Score
            </option>
            <option
              value="publishedDate"
            >
              Published date
            </option>
          </select>
        </div>
      </div>
      <div
        className="posts-list"
      >
        <div
          className="post"
          onClick={[Function]}
        >
          <div
            className="post-header"
          >
            <div
              className="post-header-title"
            >
              <span
                className="category udacity"
              >
                Udacity
              </span>
               
              Udacity is the best place to learn technology.
            </div>
            <div
              className="post-header-published"
            >
              <span
                className="published"
              >
                a year ago
              </span>
            </div>
          </div>
          <div
            className="post-header-author"
          >
            by 
            thingtwo
          </div>
          <div
            className="post-body"
          >
            Everyone says so after all.
          </div>
          <div
            className="post-footer"
          >
            <button
              className="liked"
              onClick={[Function]}
            >
              Liked 
              <span>
                5
              </span>
            </button>
            <button
              className="not-liked"
              onClick={[Function]}
            >
              Not like
            </button>
          </div>
        </div>
        <div
          className="post"
          onClick={[Function]}
        >
          <div
            className="post-header"
          >
            <div
              className="post-header-title"
            >
              <span
                className="category react"
              >
                React
              </span>
               
              Udacity is the best place to learn React
            </div>
            <div
              className="post-header-published"
            >
              <span
                className="published"
              >
                a year ago
              </span>
            </div>
          </div>
          <div
            className="post-header-author"
          >
            by 
            thingtwo
          </div>
          <div
            className="post-body"
          >
            Everyone says so after all.
          </div>
          <div
            className="post-footer"
          >
            <button
              className="liked"
              onClick={[Function]}
            >
              Liked 
              <span>
                5
              </span>
            </button>
            <button
              className="not-liked"
              onClick={[Function]}
            >
              Not like
            </button>
          </div>
        </div>
        <div
          className="post"
          onClick={[Function]}
        >
          <div
            className="post-header"
          >
            <div
              className="post-header-title"
            >
              <span
                className="category redux"
              >
                Redux
              </span>
               
              Udacity is the best place to learn Redux
            </div>
            <div
              className="post-header-published"
            >
              <span
                className="published"
              >
                a year ago
              </span>
            </div>
          </div>
          <div
            className="post-header-author"
          >
            by 
            thingtwo
          </div>
          <div
            className="post-body"
          >
            Everyone says so after all.
          </div>
          <div
            className="post-footer"
          >
            <button
              className="liked"
              onClick={[Function]}
            >
              Liked 
              <span>
                5
              </span>
            </button>
            <button
              className="not-liked"
              onClick={[Function]}
            >
              Not like
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="modal modal-open"
    id="postModal"
  >
    <div
      className="modal-dialog"
    >
      <div
        className="modal-heard modal-post"
      >
        <span
          onClick={[Function]}
        />
        <input
          autoFocus={true}
          defaultValue={undefined}
          maxLength="80"
          minLength="10"
          placeholder="Title post"
          required={true}
          type="text"
        />
      </div>
      <div
        className="modal-content modal-post"
      >
        <textarea
          defaultValue={undefined}
          maxLength="500"
          minLength="2"
          placeholder="Body post"
          required={true}
        />
        <div
          className="modal-footer"
        >
          <select
            onChange={[Function]}
          >
            <option
              value="none"
            >
              Save as?
            </option>
            <option
              value="udacity"
            >
              Udacity
            </option>
            <option
              value="react"
            >
              React
            </option>
            <option
              value="redux"
            >
              Redux
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flat-button"
    onClick={[Function]}
  >
    <a
      className="add"
    >
      Add Post
    </a>
  </div>
</div>
`;

exports[`last Snapshot 1`] = `
<div
  className="app"
>
  <div
    className="main-page-header"
  >
    <div
      className="main-page-header-title"
    >
      <span />
      <h1>
        Readable
      </h1>
      <select
        onChange={[Function]}
      >
        <option
          value="none"
        >
          All Categories
        </option>
        <option
          value="udacity"
        >
          Udacity
        </option>
        <option
          value="react"
        >
          React
        </option>
        <option
          value="redux"
        >
          Redux
        </option>
      </select>
    </div>
  </div>
  <div
    className="search-bar"
  >
    <input
      placeholder="Search by title post"
      type="text"
    />
  </div>
  <div
    className="main-page-content"
  >
    <div
      className="posts"
    >
      <div
        className="posts-title"
      >
        <span>
          Posts
        </span>
        <div
          className="order-options"
        >
          <select>
            <option
              value="voteScore"
            >
              Vote Score
            </option>
            <option
              value="publishedDate"
            >
              Published date
            </option>
          </select>
        </div>
      </div>
      <div
        className="posts-list"
      >
        <div
          className="post"
          onClick={[Function]}
        >
          <div
            className="post-header"
          >
            <div
              className="post-header-title"
            >
              <span
                className="category udacity"
              >
                Udacity
              </span>
               
              Udacity is the best place to learn technology.
            </div>
            <div
              className="post-header-published"
            >
              <span
                className="published"
              >
                a year ago
              </span>
            </div>
          </div>
          <div
            className="post-header-author"
          >
            by 
            thingtwo
          </div>
          <div
            className="post-body"
          >
            Everyone says so after all.
          </div>
          <div
            className="post-footer"
          >
            <button
              className="liked"
              onClick={[Function]}
            >
              Liked 
              <span>
                5
              </span>
            </button>
            <button
              className="not-liked"
              onClick={[Function]}
            >
              Not like
            </button>
          </div>
        </div>
        <div
          className="post"
          onClick={[Function]}
        >
          <div
            className="post-header"
          >
            <div
              className="post-header-title"
            >
              <span
                className="category react"
              >
                React
              </span>
               
              Udacity is the best place to learn React
            </div>
            <div
              className="post-header-published"
            >
              <span
                className="published"
              >
                a year ago
              </span>
            </div>
          </div>
          <div
            className="post-header-author"
          >
            by 
            thingtwo
          </div>
          <div
            className="post-body"
          >
            Everyone says so after all.
          </div>
          <div
            className="post-footer"
          >
            <button
              className="liked"
              onClick={[Function]}
            >
              Liked 
              <span>
                5
              </span>
            </button>
            <button
              className="not-liked"
              onClick={[Function]}
            >
              Not like
            </button>
          </div>
        </div>
        <div
          className="post"
          onClick={[Function]}
        >
          <div
            className="post-header"
          >
            <div
              className="post-header-title"
            >
              <span
                className="category redux"
              >
                Redux
              </span>
               
              Udacity is the best place to learn Redux
            </div>
            <div
              className="post-header-published"
            >
              <span
                className="published"
              >
                a year ago
              </span>
            </div>
          </div>
          <div
            className="post-header-author"
          >
            by 
            thingtwo
          </div>
          <div
            className="post-body"
          >
            Everyone says so after all.
          </div>
          <div
            className="post-footer"
          >
            <button
              className="liked"
              onClick={[Function]}
            >
              Liked 
              <span>
                5
              </span>
            </button>
            <button
              className="not-liked"
              onClick={[Function]}
            >
              Not like
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flat-button"
    onClick={[Function]}
  >
    <a
      className="add"
    >
      Add Post
    </a>
  </div>
</div>
`;
